fixed carousel overflow issue

--- a/scss/layouts/_iktv.scss
+++ b/scss/layouts/_iktv.scss
@@ -43,4 +43,5 @@
 
     }
     .module { background: rgba(255, 255, 255, 0.8); padding: $grid-gutter-width * 2; }
+    .slick-list { overflow: hidden; } 
 }
